--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h5 class="text-uppercase mb-2 fw-bold">Quality. Reliability. Excellence.</h5>
       <h1>Welcome to Regal Looms</h1>
       <p class="fw-bold">Your Trusted Partner in Rice Supply, Printing, and Branding Solutions</p>
-      <a href="#about" class="btn btn-primary btn-lg mt-3">Explore</a>
+      <a href="#catalogue" class="btn btn-primary btn-lg mt-3">Explore</a>
       <div class="mt-4">
         <a href="#about"><i class="fa-solid fa-angle-down fa-2x text-white"></i></a>
       </div>
@@ -125,9 +125,9 @@
         <div class="card h-100 shadow-sm">
           <img src="images/BRANDING.jpg" class="card-img-top" alt="Branding Services">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Branding Services</h5>
+            <h5 class="card-title">Branding & Design Services</h5>
             <p class="card-text">
-              Custom branding for mugs, t-shirts, banners, packaging & more.
+              Custom design & branding for mugs, t-shirts, banners, packaging & more.
             </p>
             <p class="text-muted fw-bold">*Price varies based on item & quantity</p>
             <a href="order.html?product=Branding Services" class="btn btn-primary mt-auto">Order Now</a>
