--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Regal Looms – Trusted Rice Supply & Printing Services in Kenya">
   <meta property="og:description" content="Explore our rice supply chain, printing, branding and packaging services. Serving businesses and individuals in Kenya.">
-  <meta property="og:image" content="https://yourdomain.netlify.app/images/homes.jpg"> <!-- replace with actual image URL -->
-  <meta property="og:url" content="https://yourdomain.netlify.app"> <!-- replace with your Netlify site URL -->
+  <meta property="og:image" content="https://regal-looms.netlify.app/images/homes.jpg"> <!-- replace with actual image URL -->
+  <meta property="og:url" content="https://regal-looms.netlify.app/"> <!-- replace with your Netlify site URL -->
   <meta property="og:site_name" content="Regal Looms">
 
   <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Regal Looms – Trusted Rice Supply & Printing Services in Kenya">
   <meta name="twitter:description" content="Rice supply, printing, and branding done right. Regal Looms delivers quality and trust.">
-  <meta name="twitter:image" content="https://yourdomain.netlify.app/images/homes.jpg"> <!-- replace with actual image URL -->
+  <meta name="twitter:image" content="https://regal-looms.netlify.app/images/homes.jpg"> <!-- replace with actual image URL -->
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://yourdomain.netlify.app"> <!-- change to your domain -->
+  <link rel="canonical" href="https://regal-looms.netlify.app/"> <!-- change to your domain -->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- linking css file -->
